<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.rs</groupId>
	<artifactId>parent</artifactId>
	<version>0.0.1-RELEASE</version>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.3.0.RELEASE</version>
	</parent>

	<name>rs parent pom</name>

	<description>
		2015-8-7
		增加parent为spring-boot-starter-parent 1.2.5.RELEASE

		2015-8-7
		增加lombok、jodatime、janino

		2015-8-25
		更新spring-boot为1.3.0.M4

		2015-8-26
		删除build-helper-maven-plugin中的executions

		2015-11-17
		升级springboot到1.3.0.RELEASE

		2015-11-24
		升级java版本到1.8
		指定-Xdoclint:none，不强制校验javadoc语法
	</description>

	<properties>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<dubbo.version>2.4.10</dubbo.version>
		<lombok.version>1.16.4</lombok.version>
		<joda.time.version>2.7</joda.time.version>
		<janino.version>2.7.8</janino.version>
		<commons-collections.version>3.2.2</commons-collections.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- alibaba dubbo-->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>dubbo</artifactId>
				<version>${dubbo.version}</version>
				<exclusions>
					<exclusion>
						<artifactId>spring</artifactId>
						<groupId>org.springframework</groupId>
					</exclusion>
					<exclusion>
						<artifactId>curator-framework</artifactId>
						<groupId>com.netflix.curator</groupId>
					</exclusion>
					<exclusion>
						<artifactId>xmemcached</artifactId>
						<groupId>com.googlecode.xmemcached</groupId>
					</exclusion>
					<exclusion>
						<artifactId>cxf-rt-frontend-simple</artifactId>
						<groupId>org.apache.cxf</groupId>
					</exclusion>
					<exclusion>
						<artifactId>libthrift</artifactId>
						<groupId>org.apache.thrift</groupId>
					</exclusion>
					<exclusion>
						<artifactId>cxf-rt-transports-http</artifactId>
						<groupId>org.apache.cxf</groupId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>joda-time</groupId>
				<artifactId>joda-time</artifactId>
				<version>${joda.time.version}</version>
			</dependency>
			<dependency>
				<groupId>org.codehaus.janino</groupId>
				<artifactId>janino</artifactId>
				<version>${janino.version}</version>
			</dependency>

			<!-- j2ee web spec -->
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>servlet-api</artifactId>
				<version>2.5</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>jstl</artifactId>
				<version>1.2</version>
			</dependency>
			<dependency>
				<groupId>taglibs</groupId>
				<artifactId>standard</artifactId>
				<version>1.1.2</version>
			</dependency>
			<dependency>
				<groupId>javax.annotation</groupId>
				<artifactId>jsr250-api</artifactId>
				<version>1.0</version>
			</dependency>
			<dependency>
				<groupId>javax.servlet.jsp</groupId>
				<artifactId>jsp-api</artifactId>
				<version>2.0</version>
				<scope>provided</scope>
			</dependency>
			<!-- url rewrite -->
			<dependency>
				<groupId>org.tuckey</groupId>
				<artifactId>urlrewritefilter</artifactId>
				<version>3.1.0</version>
			</dependency>
			<!-- web end -->

		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.9</version>
					<configuration>
						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.1</version>
					<configuration>
						<autoVersionSubmodules>true</autoVersionSubmodules>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.4</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.mortbay.jetty</groupId>
					<artifactId>jetty-maven-plugin</artifactId>
					<version>8.1.7.v20120910</version>
					<!--<configuration>-->
					<!--<scanIntervalSeconds>10</scanIntervalSeconds>-->
					<!--<stopKey>ofpay</stopKey>-->
					<!--<stopPort>9999</stopPort>-->
					<!--<jvmArgs>-Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m</jvmArgs>-->
					<!--</configuration>-->
					<!-- 用于集成测试 -->
					<!-- <executions> <execution> <id>start-jetty</id> <phase>pre-integration-test</phase>
                        <goals> <goal>stop</goal> <goal>run</goal> </goals> <configuration> <scanIntervalSeconds>0</scanIntervalSeconds>
                        <daemon>true</daemon> </configuration> </execution> <execution> <id>stop-jetty</id>
                        <phase>post-integration-test</phase> <goals> <goal>stop</goal> </goals> </execution>
                        </executions> -->
				</plugin>

				<!-- site -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>cobertura-maven-plugin</artifactId>
					<version>2.5.2</version>
					<configuration>
						<aggregate>true</aggregate>
						<formats>
							<format>html</format>
							<format>xml</format>
						</formats>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>2.13</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>3.3</version>
					<configuration>
						<aggregate>true</aggregate>
						<!-- PMD options -->
						<targetJdk>${java.version}</targetJdk>
						<aggregate>true</aggregate>
						<format>xml</format>
						<!-- <rulesets> <ruleset>/pmd-rules.xml</ruleset> </rulesets> -->

						<!-- CPD options -->
						<minimumTokens>20</minimumTokens>
						<ignoreIdentifiers>true</ignoreIdentifiers>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>2.5.1</version>
					<configuration>
						<effort>Max</effort>
						<xmlOutput>true</xmlOutput>
						<maxRank>15</maxRank>
						<threshold>Low</threshold>
						<maxHeap>1024</maxHeap>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>javancss-maven-plugin</artifactId>
					<version>2.0</version>
				</plugin>

				<!-- javadoc -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<configuration>
						<additionalparam>-Xdoclint:none</additionalparam>
						<aggregate>true</aggregate>
						<show>public</show>
						<maxmemory>1024</maxmemory>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<configuration>
						<reportPlugins>
							<plugin>
								<groupId>org.apache.maven.plugins</groupId>
								<artifactId>maven-javadoc-plugin</artifactId>
							</plugin>

							<plugin>
								<groupId>org.apache.maven.plugins</groupId>
								<artifactId>maven-project-info-reports-plugin</artifactId>
								<version>2.7</version>
								<reportSets>
									<reportSet>
										<reports>
											<report>dependencies</report>
										</reports>
									</reportSet>
								</reportSets>
								<configuration>
									<dependencyDetailsEnabled>false</dependencyDetailsEnabled>
									<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
								</configuration>
							</plugin>
						</reportPlugins>
					</configuration>
				</plugin>

				<!-- liquibase -->
				<plugin>
					<groupId>org.liquibase</groupId>
					<artifactId>liquibase-maven-plugin</artifactId>
					<version>3.3.2</version>
					<dependencies>
						<dependency>
							<groupId>org.yaml</groupId>
							<artifactId>snakeyaml</artifactId>
							<version>1.13</version>
						</dependency>
					</dependencies>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.2</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>ofpay-releases</id>
			<name>releases</name>
			<url>http://nexus.dev.ofpay.com/nexus/content/repositories/releases</url>
		</repository>

		<snapshotRepository>
			<id>ofpay-snapshots</id>
			<name>snapshots</name>
			<url>http://nexus.dev.ofpay.com/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>ofpay-snapshots</id>
			<name>intranet public snapshots</name>
			<url>http://nexus.dev.ofpay.com/nexus/content/repositories/snapshots</url>
			<snapshots>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</repository>

		<repository>
			<id>central</id>
			<url>http://nexus.dev.ofpay.com/nexus/content/groups/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>central</id>
			<url>http://nexus.dev.ofpay.com/nexus/content/groups/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
</project>
